Chenged styling and values in arrays.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Excuse Generator</title>
 
     <!-- Fontawesome is our recomended library for icons -->
     <link
@@ -15,12 +15,38 @@
     />
   </head>
   <body>
-    <h1>Excuse Generator v2.0</h1><br>
-    <strong><p id="excuse">My dog ate my homework</p></strong>
-    <br><p>Press refresh to get another exuse! <i class="fa-solid fa-rotate-right"></i></p>
-    <br><small><em>Version note: Array length is no longer hard-coded. Credit to Thomas Brito for catching that!</em></small>
+    <main class="text-center">
+      <h1>Excuse Generator v3.0</h1>
+      <br />
+      <strong><p id="excuse">My dog ate my homework</p></strong>
+      <br />
+      <p>
+        Press refresh to get another exuse!
+        <i class="fa-solid fa-rotate-right"></i>
+      </p>
+    </main>
+
+    <footer class="fixed-bottom text-center text-light">
+      <small
+        ><em
+          ><strong>Version 3 notes:</strong> ...</em
+        ></small
+      >
+      <br /><small
+        ><em
+          ><strong>Version 2 notes:</strong> Array length is no longer
+          hard-coded. (Changed after feedback from Thomas Brito)</em
+        ></small
+      >
+      <br /><small class="text-light"
+        ><em>
+          HTML/CSS/JavaScript code by Sean Hammond. Repository template by
+          Alejandro Sanchez and contributors at 4Geeks Academy. Mentors: Ryan
+          Castanier, Thomas Brito, Alex Ayala.</em
+        ></small
+      >
+    </footer>
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
   </body>
 </html>
-
