Removing pixel values in CSS & adding array values in JS

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     />
   </head>
   <body>
-    <main class="text-center">
+    <main class="text-center" id="excuse-container">
       <h1>Excuse Generator v3.0</h1>
       <br />
-      <strong><p id="excuse">My dog ate my homework</p></strong>
+      <strong><p class="p-3" id="excuse">My dog ate my homework</p></strong>
       <br />
       <p>
         Press refresh to get another exuse!
