Centered excuse horizontally and other minor changes

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
     <footer class="fixed-bottom text-center text-light">
       <small
         ><em
-          ><strong>Version 3 notes:</strong> ...</em
+          ><strong>Version 3 notes:</strong> Removed pixel values in CSS (based on feedback by Ryan Castanier). Changed array values.</em
         ></small
       >
       <br /><small
         ><em
           ><strong>Version 2 notes:</strong> Array length is no longer
-          hard-coded. (Changed after feedback from Thomas Brito)</em
+          hard-coded (changed after feedback from Thomas Brito).</em
         ></small
       >
       <br /><small class="text-light"
