Made note on button functionality

--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,16 @@
       <strong><p class="p-3" id="story">My dog ate my homework</p></strong>
       <br />
       <p>
-        Refresh or click below for a new story!
+        Refresh the page for a new story!
         <i class="fa-solid fa-rotate-right"></i>
       </p>
-      <button onclick="generateStory()" class="rounded-pill">New Story</button>
+      <button onclick="generateStory()" class="rounded-pill">Button functionality coming to v4.0</button>
     </main>
 
     <footer class="fixed-bottom p-3 text-center text-light">
       <small
         ><em
-          ><strong>Version 3 notes:</strong> Removed pixel values in CSS. Changed array values. Added button.</em
+          ><strong>Version 3 notes:</strong> Removed pixel values in CSS. Changed array values.</em
         ></small
       >
       <br /><small
